--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <body>
 <H1>Table of contents </H1>
-<a href="sd-hw-fw.vercel.app/index2.html">V1 I guess?</a>
+<a href="index2.html">V1 I guess?</a>
 <br>
-<a href="sd-hw-fw.vercel.app/index3.html">V2 I dont guess?</a>
+<a href="index3.html">V2 I dont guess?</a>
 <br>
 <p>Look, I have no idea what I'm doing, but I'm near the deadline (i think)</p>
 </body>
