--- a/index3.html
+++ b/index3.html
@@ -87,6 +87,9 @@
                             <div class="flex justify-between items-start">
                                 <dt class="font-semibold text-sm">Administrative Head</dt>
                                 <dd class="text-right text-sm">Dzongdag (District Administrator)</dd>
+
+<dt class="font-semibold text-sm">Currency</dt>
+                                <dd class="text-right text-sm">Ngultrum(BTN)</dd>
                             </div>
                         </dl>
                     </section>
