--- a/index3.html
+++ b/index3.html
@@ -88,6 +88,8 @@
                                 <dt class="font-semibold text-sm">Administrative Head</dt>
                                 <dd class="text-right text-sm">Dzongdag (District Administrator)</dd>
 
+                            </div>
+                            <div class="flex justify-between items-start">
 <dt class="font-semibold text-sm">Currency</dt>
                                 <dd class="text-right text-sm">Ngultrum(BTN)</dd>
                             </div>
